# IsaacLegs

./: .gitignore  README.md
docs/: custom_robot_controller.md  digital_twin.md  training.md
g1_locomotion/source/g1_locomotion/docs/: CHANGELOG.rst
isaaclab_projects/g1_locomotion/: .gitignore  README.md
isaaclab_projects/g1_locomotion/scripts/: list_envs.py
isaaclab_projects/go2_locomotion/: README.md
isaaclab_projects/go2_locomotion/scripts/: list_envs.py  random_agent.py  zero_agent.py
isaaclab_projects/go2_locomotion/scripts/rsl_rl/: play.py  train.py
isaaclab_projects/go2_locomotion/source/go2_locomotion/: setup.py
isaacsim_envs/gui/: g1.usd  g1_29dof.usd  g1_29dof_rev_1_0_flat_scene.usd  g1_flat_scene.usd  go2.usd  go2_flat_scene.usd  launch_scene.py  setup_robot_gains.py
src/fullbody_controller/: package.xml  setup.cfg  setup.py
src/fullbody_controller/fullbody_controller/: g1_policy_controller.py  policy_controller.py
src/fullbody_controller/launch/: g1.launch.py  g1_29dof.launch.py  go2.launch.py  policy_controller.launch.py
src/fullbody_controller/policy/g1_locomotion/: env.yaml  (+1 more)
src/robots/g1_description/: CMakeLists.txt  package.xml
src/robots/g1_description/launch/: display.launch.py  g1_bringup.launch.py
src/robots/g1_description/rviz/: g1.rviz
src/robots/g1_description/urdf/: g1_29dof_rev_1_0.urdf
src/robots/g1_description/usd/g1_29dof_rev_1_0/g1_29dof_rev_1_0/: g1_29dof_rev_1_0.usd
src/robots/g1_description/usd/g1_29dof_rev_1_0/g1_29dof_rev_1_0/configuration/: g1_29dof_rev_1_0_physics.usd  g1_29dof_rev_1_0_robot.usd
(+44 files in other folders)
